@@ -1,5 +1,8 @@
 2006-09-25  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
 
+	* httpAdapter.c: 
+	Fixed 1564999: Incorrect CimXmlRequest format.
+
 	* brokerUpc.c, cimXmlRequest.c, providerDrv.c, providerMgr.c, 
 	cimcClientSfcbLocal.c:
 	Fixed 1562801: Segmentation fault after the provider process limit
